# Raytracer-2025

./: .gitignore  Cargo.toml  README.md
assets/: cube2.mtl  uv_test_sphere.mtl  平滑着色测试2.mtl
assets/Final/: camera.json  mc.mtl  伞.mtl  初音未来.mtl  卒.mtl  声匣.mtl  外框.mtl  文字.mtl  水下.mtl  水面.mtl  环.mtl  玻璃球.mtl  镜子.mtl  镜子门.mtl  雾.mtl
assets/YYB初音未来/: camera.json  初音未来.mtl
assets/初音未来2/: 初音未来.mtl  发光板.mtl
doc/: completed-bonus.md
src/: aabb.rs  bvh.rs  camera.rs  hit.rs  hits.rs  lib.rs  main.rs  material.rs  pdf.rs  shapes.rs  texture.rs  utils.rs  volume.rs
src/material/: disney.rs  portal.rs
src/shapes/: environment.rs  obj.rs  quad.rs  sphere.rs  triangle.rs
src/utils/: color.rs  fresnel.rs  image.rs  interval.rs  onb.rs  perlin.rs  quaternion.rs  random.rs  ray.rs  vec3.rs
utils/: blender_camera_output.py
