[package]
name = "raytracer"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.6"
console = "0.16.0"
indicatif = "0.18.0"
rand = "0.9.1"
palette = "0.7.6"
rayon = "1.10.0"
tobj = { version = "4.0.3", features = ["use_f64"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = 0

[profile.profiling]
inherits = "release"
debug = true
